RESOLVED FIXED74963
Don't crash on the second time VideoLayerChromium::createCCVideoLayer() is called
https://bugs.webkit.org/show_bug.cgi?id=74963
Summary Don't crash on the second time VideoLayerChromium::createCCVideoLayer() is ca...
Ami Fischman
Reported 2011-12-20 15:06:02 PST
r103298 assumed that VideoLayerChromium would only create a CCVideoLayerImpl once, but that's wrong because the CC*LayerImpl tree can be dropped and recreated. Support this.
Attachments
Patch (3.31 KB, patch)
2011-12-20 15:08 PST, Ami Fischman
no flags
Patch (3.43 KB, patch)
2011-12-20 15:45 PST, Ami Fischman
no flags
Ami Fischman
Comment 1 2011-12-20 15:08:23 PST
James Robinson
Comment 2 2011-12-20 15:10:14 PST
Comment on attachment 120095 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=120095&action=review > Source/WebCore/platform/graphics/chromium/VideoLayerChromium.h:59 > + VideoFrameProvider* m_provider; would you mind adding a comment here indicating that this class should never dereference this pointer, but simply pass it on to the CCVideoLayerImpl ?
Ami Fischman
Comment 3 2011-12-20 15:45:47 PST
Ami Fischman
Comment 4 2011-12-20 15:46:16 PST
(In reply to comment #2) > (From update of attachment 120095 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=120095&action=review > > > Source/WebCore/platform/graphics/chromium/VideoLayerChromium.h:59 > > + VideoFrameProvider* m_provider; > > would you mind adding a comment here indicating that this class should never dereference this pointer, but simply pass it on to the CCVideoLayerImpl ? Done. Thanks for the quick review.
WebKit Review Bot
Comment 5 2011-12-20 17:09:28 PST
Comment on attachment 120103 [details] Patch Clearing flags on attachment: 120103 Committed r103370: <http://trac.webkit.org/changeset/103370>
WebKit Review Bot
Comment 6 2011-12-20 17:09:32 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.