Don't crash on the second time VideoLayerChromium::createCCVideoLayer() is called https://bugs.webkit.org/show_bug.cgi?id=74963

Patch by Ami Fischman <fischman@chromium.org> on 2011-12-20
Reviewed by James Robinson.

Manually tested by force-dropping the layer tree in CCLayerTreeHost::didBecomeInvisibleOnImplThread().
Crashed before the fix, doesn't crash after.

* platform/graphics/chromium/VideoLayerChromium.cpp:
(WebCore::VideoLayerChromium::VideoLayerChromium):
(WebCore::VideoLayerChromium::~VideoLayerChromium):
(WebCore::VideoLayerChromium::createCCLayerImpl):
* platform/graphics/chromium/VideoLayerChromium.h:

Canonical link: https://commits.webkit.org/91724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103370 268f45cc-cd09-0410-ab3c-d52691b4dbfc